--- a/Simulador de Pênaltis.cbp
+++ b/Simulador de Pênaltis.cbp
@@ -14,6 +14,11 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add library="mingw32" />
+					<Add library="SDL2main" />
+					<Add library="SDL2" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/Simulador de Pênaltis" prefix_auto="1" extension_auto="1" />
