--- a/Simulador de Pênaltis.cbp
+++ b/Simulador de Pênaltis.cbp
@@ -18,6 +18,7 @@
 					<Add library="mingw32" />
 					<Add library="SDL2main" />
 					<Add library="SDL2" />
+					<Add library="SDL2_Image" />
 				</Linker>
 			</Target>
 			<Target title="Release">
